2007-11-19  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/PreferencesUI/UIxPreferences.m ([UIxPreferences -signature]):
	returns the signature for the default identity of the default
	accouunt...
	([UIxPreferences -setSignature:newSignature]): accessor that sets
	the default signature.

	* UI/MailerUI/UIxMailAccountActions.m ([UIxMailAccountActions
	-composeAction]): append the message signature to the new draft.

	* SoObjects/Mailer/SOGoMailReply.m ([SOGoMailReply -signature]):
	same as above.

	* SoObjects/Mailer/SOGoMailForward.m ([SOGoMailForward
	-signature]): new method that takes the user's signature and put
	it at the end of the message, if exists.

	* UI/Common/UIxPageFrame.m ([UIxPageFrame -isSuperUser]): new
	accessor that forwards the call to the active user.

	* SoObjects/SOGo/SOGoUser.m ([SOGoUser -signature]): returns the
	user default signature.
	([SOGoUser -isSuperUser]): declares whether the user is listed
	among the super users.

	* UI/Scheduler/UIxComponentEditor.m ([UIxComponentEditor
	-setComponent:newComponent]): retain the component object.
	([UIxComponentEditor -organizerIdentity]): new accessor method to
	handle list of possible organizers.

	* UI/Scheduler/UIxAppointmentEditor.m ([UIxAppointmentEditor
	-event]): retain the returned event object.

	* SoObjects/Appointments/SOGoAppointmentObject.m
	([SOGoAppointmentObject -saveComponent:newEvent]): reset the
	organizer only if there are no attendees AND the owner of the
	component is not the organizer him-/herself.

	* UI/Scheduler/UIxComponentEditor.m ([UIxComponentEditor
	-toolbar]): rewrote in a way that ensures that each case is
	handled properly.

	* SoObjects/SOGo/SOGoUser.m ([SOGoUser -isEqual:otherUser]): new
	override method.

	* UI/Scheduler/UIxTaskEditor.m ([-acceptAction])
	([-declineAction]): commented out unused methods.

	* UI/MailPartViewers/UIxMailPartICalActions.m
	([UIxMailPartICalActions -deleteFromCalendarAction]): actually
	delete the found object.
